--- a/the-loop-master/scss/blocks/_catalog.scss
+++ b/the-loop-master/scss/blocks/_catalog.scss
@@ -13,7 +13,7 @@
 
   &__top-column {
     min-height: 250px;
-    background-image: url("../../images/cat-column-bg.png");
+    background-image: url("../images/cat-column-bg.png");
     background-repeat: no-repeat;
     background-position: bottom right;
   }
@@ -23,7 +23,7 @@
   }
 
   &__top-column--womens {
-    background-image: url("../../images/cat-column-women-bg.png");
+    background-image: url("../images/cat-column-women-bg.png");
     background-position: bottom right 44px;
   }
 
