add first JavaScript

--- a/23 Медиа выражения 2/scss/main.scss
+++ b/23 Медиа выражения 2/scss/main.scss
@@ -190,7 +190,7 @@ img {
       display: block;
       padding: 0.8em 0;
       text-align: center;
-      border-bottom: 1px dotted pink;
+      border-bottom: 1px dotted #ddd;
       border-radius: 0;
     }
   }
